peac_dev/force-app/main/default/objects/TC_DwhStoredProcedureCredential__mdt/TC_DwhStoredProcedureCredential__mdt.object-meta.xml
<CustomObject>
    <description>Used to store API Authorization info for the DwhStoredProcedure integration.</description>
    <label>TC_DwhStoredProcedureCredential</label>
    <pluralLabel>TC_DwhStoredProcedureCredentials</pluralLabel>
</CustomObject>