peac_dev/force-app/main/default/objects/TC_DwhStoredProcedureCredential__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>254</length>
    <type>Text</type>
</CustomField>