peac_dev/force-app/main/default/objects/TC_DwhStoredProcedureCredential__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>254</length>
    <type>Text</type>
</CustomField>