peac_dev/force-app/main/default/objects/TC_DwhStoredProcedureCredential__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <label>Username</label>
    <length>254</length>
    <type>Text</type>
</CustomField>