peac_dev/force-app/main/default/objects/TC_DwhStoredProcedureCredential__mdt/fields/x_api_key__c.field-meta.xml
<CustomField>
    <fullName>x_api_key__c</fullName>
    <label>x-api-key</label>
    <length>254</length>
    <type>Text</type>
</CustomField>